Add new image assets for project
- Added computer-graphic.png
- Added creative-thinking.png
- Added pen-tool.png
- Added stationery.png

These images enhance the visual elements of the project and support various design aspects.

--- a/index2.html
+++ b/index2.html
@@ -71,33 +71,209 @@
       <!-- title -->
       <main>
         <div class="about-us">
-          <h1
-            class="text-white text-[50px] lg:text-[120px] font-bold gabarito-lumos mt-15 md:mt-0 mb-5 text-center"
+          <div
+            class="about-us-title relative h-[120px] md:h-[200px] lg:h-[280px]"
           >
-            <span class="font-bold text-[#EA0026] lg:text-150">About</span> Us
-          </h1>
-          <div class="border border-[#454545] md:w-[60%] mx-auto mb-10"></div>
-          <div class="container mx-auto md:px-20 lg:w-[80%]">
+            <div id="particles-js" class="absolute inset-0 w-full h-full"></div>
             <h1
-              class="text-white text-[30px] lg:text-[29px] leading-[34.8px] font-bold montserrat-lumos mb-5 text-center"
+              class="text-white text-[50px] md:text-[100px] lg:text-[150px] font-bold gabarito-lumos mt-15 md:mt-0 md:mb-15 mb-10 text-center relative"
+            >
+              <span class="font-bold text-[#EA0026]">About</span> Us
+            </h1>
+          </div>
+
+          <div
+            class="border border-[#454545] md:w-[60%] mx-auto md:mb-25 mb-15"
+          ></div>
+          <div
+            class="mx-auto sm:max-w-[1600px] lg:max-w-[1350px] w-full md:mb-25 mb-15"
+          >
+            <div class="image rounded-xl overflow-hidden">
+              <img
+                src="./src/images/01-8.jpg"
+                alt="Contact Image"
+                loading="lazy"
+                width="1350"
+                height="600"
+              />
+            </div>
+          </div>
+          <div class="container mx-auto md:px-20 lg:w-[80%]">
+            <h2
+              class="text-white text-[20px] lg:text-[29px] leading-[34.8px] font-bold montserrat-lumos mb-5 text-start"
             >
               Lumos Development Studio
-            </h1>
+            </h2>
             <p
-              class="text-white text-sm inter-lumos leading-8 mb-20 lg:text-[24px] lg:leading-10"
+              class="text-[#878787] text-[18px] montserrat-lumos font-bold leading-8 mb-20 md:mb-40 lg:text-[20px] lg:leading-[33px]"
             >
-              Welcome to dwsign agency, where creativity meets innovation. We
-              are a team of passionate designers and developers dedicated to
-              crafting exceptional digital experiences. Lorem ipsum dolor sit
-              amet consectetur adipisicing elit. Saepe pariatur exercitationem
-              asperiores quibusdam natus iusto hic quia fugiat facilis dolore
-              quisquam sequi consectetur accusantium, possimus eveniet odio nisi
-              officia ad?
+              Lumos is a full-cycle digital studio focused on delivering
+              results. We help businesses grow through high-quality websites,
+              modern web applications, intuitive interfaces, and powerful mobile
+              apps. <br />
+              <br />
+              Our team consists of senior-level specialists with 10+ years of
+              experience in web development, UI/UX, mobile engineering, and
+              visual design. Even though Lumos is a young brand, our expertise
+              is proven by years of working on complex, real-world projects
+              across different industries. <br />
+              <br />
+              Whether you need a sleek one-page website or a large-scale
+              enterprise platform with custom architecture, integrations, and
+              unique business logic — we can build it. We handle projects of any
+              size and any level of complexity. <br />
+              <br />
+              We work with a strong and future-ready technology stack: Python &
+              Django, PHP & Laravel, React, Next.js Vue.js, Nuxt.js & React
+              Native. This allows us to create fast, secure, scalable products
+              that perform perfectly on any device. <br />
+              <br />
+              Why clients choose Lumos: We deliver modern, world-class designs
+              We build clean, reliable, and scalable code We communicate clearly
+              and take full ownership We focus on results that bring real value
+              to your business At Lumos, we don’t just execute tasks — we become
+              your technology partner. Your goals become our goals, and we bring
+              your ideas to life with precision, creativity, and passion. If you
+              want a digital product that stands out and drives success — Lumos
+              is ready.
             </p>
+          </div>
+        </div>
+
+        <div class="carusel">
+          <div class="carusel-card mx-auto w-full max-w-6xl">
+            <div class="csrd-text text-center text-white mx-auto px-4">
+              <div class="carousel-container mx-auto overflow-hidden">
+                <div
+                  class="carousel-track flex gap-4 transition-transform duration-500"
+                >
+                  <div class="carousel-text flex-shrink-0 w-full md:w-1/3 px-2">
+                    <div class="carousel-image w-full flex justify-center mb-4">
+                      <img
+                        src="./src/images/computer-graphic.png"
+                        width="120"
+                        height="120"
+                        alt=""
+                        class="w-30 h-30"
+                      />
+                    </div>
+
+                    <h3
+                      class="carusel-title text-[19px] montserrat-lumos font-medium leading-6 mb-2"
+                    >
+                      Web Design
+                    </h3>
+                    <div
+                      class="border-2 border-[#EA0026] w-10 flex flex-col justify-center items-center mx-auto my-4"
+                    ></div>
+                    <p
+                      class="text-[15px] monserant-lumos font-[500]leading-[22px] text-[#B0B0B0] w-3/4 mx-auto"
+                    >
+                      One morning, when Gregor Samsa woke from troubled dreams,
+                      he found transformed in his bed into.
+                    </p>
+                  </div>
+                  <div class="carousel-text flex-shrink-0 w-full md:w-1/3 px-2">
+                    <div class="carousel-image w-full flex justify-center mb-4">
+                      <img
+                        src="./src/images/creative-thinking.png"
+                        width="120"
+                        height="120"
+                        alt=""
+                        class="w-30 h-30"
+                      />
+                    </div>
+
+                    <h3
+                      class="carusel-title text-[19px] montserrat-lumos font-medium leading-6 mb-2"
+                    >
+                      Web Design
+                    </h3>
+                    <div
+                      class="border-2 border-[#EA0026] w-10 flex flex-col justify-center items-center mx-auto my-4"
+                    ></div>
+                    <p
+                      class="text-[15px] monserant-lumos font-[500]leading-[22px] text-[#B0B0B0] w-3/4 mx-auto"
+                    >
+                      One morning, when Gregor Samsa woke from troubled dreams,
+                      he found transformed in his bed into.
+                    </p>
+                  </div>
+                  <div class="carousel-text flex-shrink-0 w-full md:w-1/3 px-2">
+                    <div class="carousel-image w-full flex justify-center mb-4">
+                      <img
+                        src="./src/images/pen-tool.png"
+                        width="120"
+                        height="120"
+                        alt=""
+                        class="w-30 h-30"
+                      />
+                    </div>
+
+                    <h3
+                      class="carusel-title text-[19px] montserrat-lumos font-medium leading-6 mb-2"
+                    >
+                      Web Design
+                    </h3>
+                    <div
+                      class="border-2 border-[#EA0026] w-10 flex flex-col justify-center items-center mx-auto my-4"
+                    ></div>
+                    <p
+                      class="text-[15px] monserant-lumos font-[500]leading-[22px] text-[#B0B0B0] w-3/4 mx-auto"
+                    >
+                      One morning, when Gregor Samsa woke from troubled dreams,
+                      he found transformed in his bed into.
+                    </p>
+                  </div>
+                  <div class="carousel-text flex-shrink-0 w-full md:w-1/3 px-2">
+                    <div class="carousel-image w-full flex justify-center mb-4">
+                      <img
+                        src="./src/images/stationery.png"
+                        width="120"
+                        height="120"
+                        alt=""
+                        class="w-30 h-30"
+                      />
+                    </div>
+
+                    <h3
+                      class="carusel-title text-[19px] montserrat-lumos font-medium leading-6 mb-2"
+                    >
+                      Web Design
+                    </h3>
+                    <div
+                      class="border-2 border-[#EA0026] w-10 flex flex-col justify-center items-center mx-auto my-4"
+                    ></div>
+                    <p
+                      class="text-[15px] monserant-lumos font-[500]leading-[22px] text-[#B0B0B0] w-3/4 mx-auto"
+                    >
+                      One morning, when Gregor Samsa woke from troubled dreams,
+                      he found transformed in his bed into.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="indicator-switch mt-8 flex justify-center gap-2">
+                <button
+                  class="carousel-button text-[80px] hover:text-[#F50C0C] transition-all duration-300 cursor-pointer active:scale-110"
+                  data-index="0"
+                >
+                  .
+                </button>
+                <button
+                  class="carousel-button text-[80px] hover:text-[#F50C0C] transition-all duration-300 cursor-pointer active:scale-110"
+                  data-index="1"
+                >
+                  .
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </main>
     </div>
+    `
     <footer
       class="footer-content text-center bg-black inter-lumos h-50 text-[14px] bottom-0 w-full mt-80"
     >
@@ -108,6 +284,7 @@
       </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
       //menu toggle
       document
@@ -127,6 +304,88 @@
             .querySelector(".border-t")
             .classList.toggle("translate-y-[-20px]");
         });
+
+      document.addEventListener("DOMContentLoaded", () => {
+        particlesJS("particles-js", {
+          particles: {
+            number: { value: 170, density: { enable: true, value_area: 800 } },
+            color: { value: "#454545" },
+            shape: { type: "circle" },
+            opacity: { value: 0.5, random: false },
+            size: { value: 2, random: true },
+            line_linked: {
+              enable: true,
+              distance: 150,
+              color: "#7f7f7f",
+              opacity: 0.4,
+              width: 1,
+            },
+            move: {
+              enable: true,
+              speed: 6,
+              direction: "none",
+              random: false,
+              straight: false,
+              out_mode: "out",
+              bounce: false,
+            },
+          },
+          interactivity: {
+            detect_on: "canvas",
+            events: {
+              onhover: { enable: true, mode: "repulse" },
+              onclick: { enable: true, mode: "push" },
+              resize: true,
+            },
+            modes: {
+              repulse: { distance: 200, duration: 0.4 },
+              push: { particles_nb: 4 },
+            },
+          },
+          retina_detect: true,
+        });
+
+        const track = document.querySelector(".carousel-track");
+        const buttons = document.querySelectorAll(".carousel-button");
+        const items = document.querySelectorAll(".carousel-text");
+        let currentIndex = 0;
+        const itemsPerView = window.innerWidth >= 768 ? 3 : 1; // Show 3 on desktop, 1 on mobile
+        const totalItems = items.length;
+        const maxIndex = Math.max(0, totalItems - itemsPerView);
+
+        function updateCarousel() {
+          const percentage = -(currentIndex * (100 / itemsPerView));
+          track.style.transform = `translateX(${percentage}%)`;
+
+          buttons.forEach((btn, idx) => {
+            if (idx === currentIndex) {
+              btn.style.color = "#F50C0C";
+            } else {
+              btn.style.color = "white";
+            }
+          });
+        }
+
+        buttons.forEach((button, index) => {
+          button.addEventListener("click", () => {
+            currentIndex = index;
+            if (currentIndex > maxIndex) {
+              currentIndex = 0;
+            }
+            updateCarousel();
+          });
+        });
+
+        setInterval(() => {
+          currentIndex++;
+          if (currentIndex > maxIndex) {
+            currentIndex = 0;
+          }
+          updateCarousel();
+        }, 3000);
+
+        updateCarousel();
+      });
     </script>
   </body>
 </html>
