--- a/index3.html
+++ b/index3.html
@@ -69,21 +69,32 @@
       <!-- title -->
       <main>
         <div class="contact">
-          <h1
-            class="text-white text-[50px] lg:text-[120px] mt-15 md:mt-0 mb-5 font-bold gabarito-lumos text-center"
-          >
-            <span class="font-bold text-[#EA0026] lg:text-150">Conta</span>ct
-          </h1>
-          <div class="border border-[#454545] md:w-[60%] mx-auto mb-10"></div>
           <div
-            class="text-white text-sm inter-lumos leading-8 mb-20 text-center lg:text-[20px] lg:leading-10"
+            class="contact-us-title relative h-[120px] md:h-[200px] lg:h-[280px]"
+          >
+            <div
+              id="particles-js"
+              class="absolute inset-0 w-full h-full z-10"
+            ></div>
+            <h1
+              class="text-white text-[50px] md:text-[100px] lg:text-[150px] font-bold gabarito-lumos mt-15 md:mt-0 md:mb-15 mb-10 text-center relative"
+            >
+              <span class="font-bold text-[#EA0026]">Contact</span> Us
+            </h1>
+          </div>
+
+          <div
+            class="border border-[#454545] md:w-[60%] mx-auto md:mb-25 mb-15"
+          ></div>
+          <div
+            class="text-white text-sm inter-lumos leading-8 mb-20 text-center lg:text-[20px] lg:leading-10 z-100"
           >
             <p>1444 S. Alameda Street Los Angeles, California 90021</p>
             <p></p>
             <p>
               <a
                 href="mailto:hi@gorge.com"
-                class="text-white hover:text-[#F50C0C] transition-all duration-300"
+                class="text-[#5F5E5F] hover:text-[#F50C0C] transition-all duration-300"
                 >hi@gorge.com</a
               >
             </p>
@@ -97,7 +108,10 @@
           </div>
         </div>
         <div class="send-messege">
-          <form action="#" class="flex flex-col gap-6 lg:w-[50%] mx-auto">
+          <form
+            action="#"
+            class="flex flex-col gap-6 lg:w-[50%] mx-auto relative z-20"
+          >
             <div class="flex flex-col lg:flex-row gap-6">
               <input
                 type="text"
@@ -125,12 +139,12 @@
             </div>
           </form>
           <div
-            class="border border-[#EA0026] md:w-[50%] mx-auto mb-20 text-center mt-20 overkflow-hidden flex items-center justify-center"
+            class="border border-[#EA0026] mx-auto mb-20 text-center mt-20 overkflow-hidden flex items-center justify-center w-fit"
           >
             <p
-              class="text-white montserrat-lumos whitespace-nowrap animate-marquee text-sm md:text-base p-2"
+              class="text-white montserrat-lumos whitespace-nowrap animate-marquee text-sm md:text-base px-11 py-2"
             >
-              One or more fields have an error. Please check and try again.
+              One or more fields have an error. Please check and try
             </p>
           </div>
         </div>
@@ -143,7 +157,7 @@
         <p>© 2025 dwsign agency. All rights reserved.</p>
       </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
       //menu toggle
       document
@@ -163,6 +177,47 @@
             .querySelector(".border-t")
             .classList.toggle("translate-y-[-20px]");
         });
+
+      document.addEventListener("DOMContentLoaded", () => {
+        particlesJS("particles-js", {
+          particles: {
+            number: { value: 170, density: { enable: true, value_area: 800 } },
+            color: { value: "#454545" },
+            shape: { type: "circle" },
+            opacity: { value: 0.5, random: false },
+            size: { value: 2, random: true },
+            line_linked: {
+              enable: true,
+              distance: 150,
+              color: "#7f7f7f",
+              opacity: 0.4,
+              width: 1,
+            },
+            move: {
+              enable: true,
+              speed: 6,
+              direction: "none",
+              random: false,
+              straight: false,
+              out_mode: "out",
+              bounce: false,
+            },
+          },
+          interactivity: {
+            detect_on: "canvas",
+            events: {
+              onhover: { enable: true, mode: "repulse" },
+              onclick: { enable: true, mode: "push" },
+              resize: true,
+            },
+            modes: {
+              repulse: { distance: 200, duration: 0.4 },
+              push: { particles_nb: 4 },
+            },
+          },
+          retina_detect: true,
+        });
+      });
     </script>
   </body>
 </html>
