chore: clean up code structure and remove redundant changes

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </div>
 
       <main
-        class="mx-auto text-center relative md:mt-50 mt-30 sm:max-w-[1600px] lg:max-w-[1350px] w-full mb-50"
+        class="mx-auto text-center relative md:mt-50 mt-30 sm:max-w-[1600px] lg:max-w-[1350px] w-full mb-64"
       >
         <div>
           <div
@@ -144,7 +144,7 @@
             </button>
           </div>
           <div
-            class="mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 py-15 text-center h-auto"
+            class="mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 py-15 text-center"
           >
             <a href="" class="filter-card" data-category="branding">
               <div class="card">
@@ -209,6 +209,132 @@
                 </div>
               </div>
             </a>
+            <a href="" class="filter-card" data-category="photography">
+              <div class="card" data-category="photography">
+                <div class="card-content">
+                  <img
+                    class="rounded-[15px] h-auto"
+                    src="./src/images/card/card-3.jpg"
+                    alt=""
+                    loading="lazy"
+                    width="434"
+                    height="290"
+                  />
+                  <div class="card-overlay">
+                    <h2 class="card-title md:flex-col">Brand Identity</h2>
+                    <h2 class="card-title-secondary block">Photo Shoot</h2>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="" class="filter-card" data-category="photography">
+              <div class="card" data-category="photography">
+                <div class="card-content">
+                  <img
+                    class="rounded-[15px] h-auto"
+                    src="./src/images/card/card-3.jpg"
+                    alt=""
+                    loading="lazy"
+                    width="434"
+                    height="290"
+                  />
+                  <div class="card-overlay">
+                    <h2 class="card-title md:flex-col">Brand Identity</h2>
+                    <h2 class="card-title-secondary block">Photo Shoot</h2>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="" class="filter-card" data-category="photography">
+              <div class="card" data-category="photography">
+                <div class="card-content">
+                  <img
+                    class="rounded-[15px] h-auto"
+                    src="./src/images/card/card-3.jpg"
+                    alt=""
+                    loading="lazy"
+                    width="434"
+                    height="290"
+                  />
+                  <div class="card-overlay">
+                    <h2 class="card-title md:flex-col">Brand Identity</h2>
+                    <h2 class="card-title-secondary block">Photo Shoot</h2>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="" class="filter-card" data-category="photography">
+              <div class="card" data-category="photography">
+                <div class="card-content">
+                  <img
+                    class="rounded-[15px] h-auto"
+                    src="./src/images/card/card-3.jpg"
+                    alt=""
+                    loading="lazy"
+                    width="434"
+                    height="290"
+                  />
+                  <div class="card-overlay">
+                    <h2 class="card-title md:flex-col">Brand Identity</h2>
+                    <h2 class="card-title-secondary block">Photo Shoot</h2>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="" class="filter-card" data-category="photography">
+              <div class="card" data-category="photography">
+                <div class="card-content">
+                  <img
+                    class="rounded-[15px] h-auto"
+                    src="./src/images/card/card-3.jpg"
+                    alt=""
+                    loading="lazy"
+                    width="434"
+                    height="290"
+                  />
+                  <div class="card-overlay">
+                    <h2 class="card-title md:flex-col">Brand Identity</h2>
+                    <h2 class="card-title-secondary block">Photo Shoot</h2>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="" class="filter-card" data-category="digital">
+              <div class="card" data-category="digital">
+                <div class="card-content">
+                  <img
+                    class="rounded-[15px] h-auto"
+                    src="./src/images/card/card4.jpg"
+                    alt=""
+                    loading="lazy"
+                    width="434"
+                    height="290"
+                  />
+                  <div class="card-overlay">
+                    <h2 class="card-title md:flex-col">Brand Identity</h2>
+                    <h2 class="card-title-secondary block">Photo Shoot</h2>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="" class="filter-card" data-category="digital">
+              <div class="card" data-category="digital">
+                <div class="card-content">
+                  <img
+                    class="rounded-[15px] h-auto"
+                    src="./src/images/card/card4.jpg"
+                    alt=""
+                    loading="lazy"
+                    width="434"
+                    height="290"
+                  />
+                  <div class="card-overlay">
+                    <h2 class="card-title md:flex-col">Brand Identity</h2>
+                    <h2 class="card-title-secondary block">Photo Shoot</h2>
+                  </div>
+                </div>
+              </div>
+            </a>
             <a href="" class="filter-card" data-category="digital">
               <div class="card" data-category="digital">
                 <div class="card-content">
@@ -237,7 +363,7 @@
                     loading="lazy"
                   />
                   <div class="card-overlay">
-                    <h2 class="card-title md:flec-col">Brand Identity</h2>
+                    <h2 class="card-title md:flex-col">Brand Identity</h2>
                     <h2 class="card-title-secondary block">Photo Shoot</h2>
                   </div>
                 </div>
@@ -310,9 +436,11 @@
       </main>
     </div>
     <footer
-      class="footer-content text-center bg-black inter-lumos h-50 text-[14px]"
+      class="footer-content text-center bg-black h-20 md:h-30 inter-lumos text-[14px]"
     >
-      <div class="flex justify-center items-center h-50 py-6 text-[#BFB8B8]">
+      <div
+        class="flex justify-center items-center h-20 md:h-30 py-6 text-[#BFB8B8]"
+      >
         <p>© 2025 dwsign agency. All rights reserved.</p>
       </div>
     </footer>
